--- a/salida/negocio1.html
+++ b/salida/negocio1.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Negocio Uno</title>
+<title>AETERNO</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -43,7 +43,7 @@ function copiar(texto) {
 </head>
 <body>
 <div class="card">
-    <h2>Negocio Uno</h2>
+    <h2>AETERNO</h2>
 
     <p><strong>CLABE:</strong><br>123456789012345678</p>
     <button onclick="copiar('123456789012345678')">Copiar CLABE</button>
