--- a/salida/negocio2.html
+++ b/salida/negocio2.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Negocio Dos</title>
+<title>PRUEBA 2</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -43,7 +43,7 @@ function copiar(texto) {
 </head>
 <body>
 <div class="card">
-    <h2>Negocio Dos</h2>
+    <h2>PRUEBA 2</h2>
 
     <p><strong>CLABE:</strong><br>987654321098765432</p>
     <button onclick="copiar('987654321098765432')">Copiar CLABE</button>
