--- a/salida/AETERNA.html
+++ b/salida/AETERNA.html
@@ -45,11 +45,11 @@ function copiar(texto) {
 <div class="card">
     <h2>AETERNO</h2>
 
-    <p><strong>CLABE:</strong><br>123456789012345678</p>
-    <button onclick="copiar('123456789012345678')">Copiar CLABE</button>
+    <p><strong>CLABE:</strong><br>012180015474174038</p>
+    <button onclick="copiar('012180015474174038')">Copiar CLABE</button>
 
-    <p><strong>Número de Tarjeta:</strong><br>1111 2222 3333 4444</p>
-    <button onclick="copiar('1111 2222 3333 4444')">Copiar Tarjeta</button>
+    <p><strong>Número de Tarjeta:</strong><br>1547417403</p>
+    <button onclick="copiar('1547417403')">Copiar Tarjeta</button>
 </div>
 </body>
 </html>
